--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,14 @@ dependencies = [
     "torch>=2.7.0",
 ]
 
+
+[tool.isort]
+
+[tool.ruff.lint]
+# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
+# overlap with the use of a formatter, like Black, but we can override this behavior by
+# explicitly adding the rule.
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
@@ -19,6 +27,7 @@ build-backend = "hatchling.build"
 [dependency-groups]
 dev = [
     "coverage>=7.8.0",
+    "isort>=6.0.1",
     "pre-commit>=4.2.0",
     "pytest>=8.3.5",
     "ruff>=0.11.8",
