--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,6 +15,7 @@ repos:
       - id: detect-private-key
       - id: name-tests-test
         args: [--pytest-test-first]
+      - id: mixed-line-ending
 
   - repo: https://github.com/astral-sh/uv-pre-commit
     # uv version.
